exercicio da aula 26/08

--- a/angular.json
+++ b/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "exercicio1"
+  "defaultProject": "exercicio1",
+  "cli": {
+    "analytics": false
+  }
 }
